# python-dependency-injector

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pylintrc  .travis.yml  .travis.yml.bk  CONTRIBUTORS.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  config_fix.py  config_test.py  config_test2.py  manage.py  object_test.py  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-ext.txt  requirements-maintain.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.cursor/rules/: coding-guide.mdc  makefile-commands.mdc  run-examples.mdc
.github/: FUNDING.yml
.github/workflows/: linters.yml  publishing.yml  tests-and-linters.yml  tests.yml
dependency_injector/: __init__.py  catalog.py  catalogs.py  containers.py  errors.py  injections.pxd  injections.py  injections.pyx  providers.py  utils.py
dependency_injector/catalogs/: __init__.py  bundle.py  declarative.py  dynamic.py  utils.py
dependency_injector/providers/: __init__.py  base.py  callable.py  config.py  creational.py  static.py  utils.py
docs/: Makefile  _providers.rst  advanced_usage.rst  catalogs.rst  changelog.rst  conf.py  decorators.rst  entities.rst  examples.rst  feedback.rst  index.rst  injections.rst  installation.rst  introduction.rst  providers.rst  sponsor.rst  wiring.rst
docs/_static/: custom.css  disqus.js  sphinx_rtd_theme-hotfix.css  sponsor.html
docs/advanced_usage/: index.rst
docs/api/: aiohttpext.rst  asgi-lifespan.rst  catalogs.rst  containers.rst  errors.rst  flaskext.rst  index.rst  injections.rst  providers.rst  top_level.rst  utils.rst  wiring.rst
docs/catalogs/: bundles.rst  declarative.rst  dynamic.rst  index.rst  operating.rst  overriding.rst  specialization.rst  subsets.rst  writing.rst
docs/containers/: check_dependencies.rst  copying.rst  declarative.rst  dynamic.rst  index.rst  inject_self.rst  overriding.rst  reset_singletons.rst  specialization.rst  traversal.rst
docs/examples/: aiohttp.rst  application-multiple-containers.rst  application-single-container.rst  boto3.rst  bundles_miniapp.rst  chained_factories.rst  decoupled-packages.rst  django.rst  factory_of_factories.rst  fastapi-redis.rst  fastapi-sqlalchemy.rst  fastapi.rst  fastdepends.rst  flask-blueprints.rst  flask.rst  index.rst  movie_lister.rst  password_hashing_miniapp.rst  sanic.rst  services-multiple-containers.rst  services-single-container.rst  services_miniapp.rst  services_miniapp_v1.rst  services_miniapp_v2.rst  use_cases_miniapp.rst
docs/examples-other/: bundles_miniapp.rst  chained-factories.rst  factory-of-factories.rst  factory_of_factories.rst  index.rst  password-hashing.rst  password_hashing_miniapp.rst  use-cases.rst
docs/introduction/: di_in_python.rst  index.rst  installation.rst  key_features.rst  structure.rst  what_is_di.rst
docs/main/: changelog.rst  feedback.rst  installation.rst  introduction.rst
docs/providers/: aggregate.rst  async.rst  callable.rst  configuration.rst  coroutine.rst  custom.rst  delegation.rst  dependency.rst  dict.rst  extending.rst  external_dependency.rst  factory.rst  index.rst  list.rst  object.rst  overriding.rst  provided_instance.rst  resource.rst  selector.rst  singleton.rst  static.rst  typing_mypy.rst
docs/tutorials/: aiohttp.rst  asyncio-daemon.rst  asyncio.rst  cli.rst  flask.rst  index.rst
examples/: .pydocstylerc  README.md  api_client.py  auth_system.py  callable_provider.py  catalog.py  concept.py  concept_full_syntax.py  concept_providing_callbacks.py  concept_v1.py  concept_v2.py  config_provider.py  delegate.py  example.py  external_dependency.py  initial.py  inject_decorator2.py  injections.py  override.py  overrides.py  scoped_provider.py  services.py  singleton_and_factory.py  usage.py
examples/advanced_usage/: config_provider.py  inject_decorator_flask.py  inject_decorator_simple.py  inject_flask.py  inject_flask_class_based.py  inject_simple.py
examples/catalogs/: bundles.py  declarative.py  declarative_api.py  declarative_inheritance.py  declarative_injections.py  dynamic.py  dynamic_runtime_creation.py  operating_with_providers.py  override.py  override_declarative.py  override_declarative_by_dynamic.py  override_declarative_decorator.py  override_decorator.py  packs.py  simple.py  subsets.py  writing_catalogs.py
examples/containers/: check_dependencies.py  declarative.py  declarative_copy_decorator.py  declarative_copy_decorator1.py  declarative_copy_decorator2.py  declarative_inheritance.py  declarative_injections.py  declarative_override_decorator.py  declarative_override_providers.py  declarative_provider_type.py  dynamic.py  dynamic_provider_type.py  dynamic_runtime_creation.py  inject_self.py  override.py  override_declarative.py  override_declarative_decorator.py  reset_singletons.py  reset_singletons_subcontainers.py  reset_singletons_with.py  traverse.py
examples/demo/: .pydocstylerc  after.py  before.py  demo.py  di.py  example.py  test.py  with_di.py
examples/di_demo/: di_example.py  example.py  example_di.py  example_no_di.py  ioc_example.py
examples/di_demo2/: config.yml  demo.py  example_di.py  example_no_di.py  test.py
examples/ioc_demo/: car_engine_2.py
examples/ioc_di_demos/: car_engine.py  car_engine_1.py  car_engine_ioc.py  car_engine_ioc_container.py  example_ioc.py  ioc_container_example.py
examples/misc/: callbacks_based_container.py  catalog_providing_callbacks.py
examples/providers/: abstract_factory.py  aggregate.py  async.py  async_overriding.py  callable.py  callable_args.py  callable_delegation.py  callable_injections.py  callable_kwargs.py  callable_reusable.py  coroutine.py  coroutine_async_await.py  custom_factory.py  delegated_callable.py  delegated_factory.py  delegated_singleton.py  delegation.py  dependency.py  dict.py  list.py  (+37 more)
objects/: __init__.py  catalog.py  decorators.py  errors.py  injections.py  providers.py  std_providers.py  utils.py
tests/: __init__.py  test_catalog.py  test_catalogs.py  test_common.py  test_containers.py  test_decorators.py  test_injections.py  test_providers.py  test_utils.py
(+747 files in other folders)
